--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
+  <h1>Javascript Drum Kit</h1>
+  <h2>Use your keyboard to play the drums!</h2>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -46,7 +46,6 @@
       <span class="sound">tink</span>
     </div>
   </div>
-
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
@@ -56,11 +55,30 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
-
 <script>
+  function playSound(event){
+    const code = event.keyCode;
+    const audio = document.querySelector(`audio[data-key="${code}"]`);
+    const key = document.querySelector(`.key[data-key="${code}"]`);
+    if(!audio){
+      return;
+    }
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add("playing");
+  }
 
+  function removeTransition(transition){
+    if(transition.propertyName != "transform"){
+      return;
+    }
+    this.classList.remove("playing");
+  }
+
+  const keys = document.querySelectorAll(".key");
+  keys.forEach(key => key.addEventListener("transitionend", removeTransition));
+
+  window.addEventListener("keydown", playSound);
 </script>
-
-
 </body>
 </html>
